--- a/app/views/profile/show_settings.html.erb
+++ b/app/views/profile/show_settings.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag  'brands-setting.css', media: 'all' %>
 
-<% title "Profile Settings" %>
+<% title 'Profile Settings' %>
 
 <div class="brands-setting-content-wrapper">
   <div class="brands-setting privacy-setting">
@@ -13,7 +13,7 @@
         <div class="setting-content">
           <label>Status</label>
           <div class="onoffswitch">
-            <%= f.check_box :is_available , class:'onoffswitch-checkbox', id: 'setting-on-off-switch' %>
+            <%= f.check_box :is_available, class:'onoffswitch-checkbox', id: 'setting-on-off-switch' %>
             <label class="onoffswitch-label" for="setting-on-off-switch">
               <span class="onoffswitch-inner"></span>
               <span class="onoffswitch-switch"></span>
@@ -29,20 +29,22 @@
           </header>
 
           <div class="setting-content">
+
             <div class="section1">
               <label>Email Reminders</label>
               <div class="onoffswitch">
-                <%= f.check_box :email_remainder_active , class:'onoffswitch-checkbox', id: 'other-setting-section1-on-off-switch' %>
+                <%= f.check_box :email_remainder_active, class:'onoffswitch-checkbox', id: 'other-setting-section1-on-off-switch' %>
                 <label class="onoffswitch-label" for="other-setting-section1-on-off-switch">
                   <span class="onoffswitch-inner"></span>
                   <span class="onoffswitch-switch"></span>
                 </label>
               </div>
             </div>
+
             <div class="section2">
               <label>SMS Reminders</label>
               <div class="onoffswitch">
-                <%= f.check_box :sms_remainder_active , class:'onoffswitch-checkbox', id: 'other-setting-section2-on-off-switch' %>
+                <%= f.check_box :sms_remainder_active, class:'onoffswitch-checkbox', id: 'other-setting-section2-on-off-switch' %>
                 <label class="onoffswitch-label" for="other-setting-section2-on-off-switch">
                   <span class="onoffswitch-inner"></span>
                   <span class="onoffswitch-switch"></span>
@@ -57,9 +59,9 @@
           <header>
             DEACTIVATE ACCOUNT
           </header>
-          <%= link_to 'DEACTIVATE', deactivate_account_profile_index_path, method: :post, data: { confirm: 'Are you sure to Deactivate your Account ?' },class:'btn btn-default btn-deactive' %>
+          <%= link_to 'DEACTIVATE', deactivate_account_profile_index_path, method: :post, data: { confirm: 'Are you sure to Deactivate your Account ?' }, class:'btn btn-default btn-deactive' %>
         </div>
 
         </div>
-        <%= f.button  'SAVE', class: 'btn btn-default btn-save' %>
+        <%= f.button 'SAVE', class: 'btn btn-default btn-save' %>
     <% end %>
