--- a/app/views/brand_payments/index.html.erb
+++ b/app/views/brand_payments/index.html.erb
@@ -37,8 +37,8 @@
               <% @transactions.each do |transaction| %>
                   <tr>
                     <td class="squaredFour"><input type="checkbox" class="BrandPaymentCheckBox" data-id="<%= transaction.id %>" value="1"/></td>
-                    <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime("%B %d, %Y") : 'NA' %></td>
-                    <td><%= sprintf("BP%05d" ,transaction.id) %></td>
+                    <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime('%B %d, %Y') : 'NA' %></td>
+                    <td><%= sprintf('BP%05d' ,transaction.id) %></td>
                     <td><%= transaction.amount_billed %></td>
                     <td>
                       <% if transaction.pending? %>
