--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -3,7 +3,7 @@
       <div class="modal-dialog">
         <div class="modal-content profile-image-modal-content">
           <div class="modal-header profile-image-modal-header">
-            <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => "logo") %></a>
+            <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
