--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -11,7 +11,7 @@
           <div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                <%= image_tag(influencer.profile_picture, :class => 'explore-influencer-picture', :alt => "profile-picture") %>
+                <%= image_tag(influencer.profile_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
               </div>
 
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
