--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="header">
   <div class="wrapper-content">
-    <%= image_tag('Logo.png', :class => 'logo', :alt => "logo") %>
+    <%= image_tag('Logo.png', :class => 'logo', :alt => 'logo') %>
     <nav class="navbar">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="true">
@@ -24,7 +24,7 @@
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
-              <li><%= link_to 'SIGN UP FREE', '#loginModal', "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
+              <li><%= link_to 'SIGN UP FREE', '#loginModal', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white' %></li>
           <% end %>
         </ul>
       </div>
@@ -158,7 +158,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <%= submit_tag "SUBMIT", class: "btn btn-primary btn-submit" %>
+                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit' %>
               </div>
             </div>
         <% end %>
@@ -166,7 +166,7 @@
       </div>
     </div>
     <% if current_user %>
-        <a href="<%= user_omniauth_authorize_path('facebook', add_facebook_to_account: true, user_id: current_user.id, origin: home_public_index_path) %>">Connect Facebook to my accoutn <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
+        <a href="<%= user_omniauth_authorize_path('facebook', add_facebook_to_account: true, user_id: current_user.id, origin: home_public_index_path) %>">Connect Facebook to my accoutn <%= image_tag('facebook-icon.png', :alt => 'fb') %></a>
     <% end %>
 
   </div>
