--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="header">
   <div class="wrapper-content">
-    <%= image_tag('Logo.png', :class => 'logo', :alt => "logo") %>
+    <%= image_tag('Logo.png', :class => 'logo', :alt => 'logo') %>
     <nav class="navbar">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="true">
@@ -16,7 +16,7 @@
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
         <ul class="nav navbar-nav my-nav-bar">
-          <li><%= link_to 'INFLUENCERS', home_public_index_path, class:  current_path(home_public_index_path) %></li>
+          <li><%= link_to 'INFLUENCERS', home_public_index_path, class: current_path(home_public_index_path) %></li>
           <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
           <li id="about"><a href="#about_us">ABOUT US</a></li>
           <% if user_signed_in? %>
@@ -24,7 +24,7 @@
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
-              <li><%= link_to "SIGN UP FREE", "#loginModal", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
+              <li><%= link_to 'SIGN UP FREE', '#loginModal', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white' %></li>
           <% end %>
         </ul>
       </div>
@@ -157,7 +157,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <%= submit_tag "SUBMIT", class: "btn btn-primary btn-submit" %>
+                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit' %>
               </div>
             </div>
         <% end %>
