--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -143,7 +143,7 @@
 
               <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin only-right-padding">
                 <div class="form-group">
-                  <input type="text" class="form-control" name="phone_number" placeholder="Phone Number"/>
+                  <input type="tel" pattern='(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)' class="form-control" name="phone_number" placeholder="Phone Number"/>
                 </div>
               </div>
             </div>
