--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,5 +1,7 @@
 <% if @success %>
     window.location.href = "<%= new_user_registration_path %>";
 <% else %>
-    alert('Fail to sign up');
+    console.log('---------------- render sign up errors-----------------------' );
+
+    $('#validation-error').html("<%= j render 'shared/show_errors', :object => @user %>");
 <% end %>
