--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -21,7 +21,7 @@
         <div class="row hidden" id="brand-signup">
           <div class="col-md-12">
             <p>Account Set Up</p>
-
+            <div id="validation-error" class="text-danger">this is </div>
             <form id="ajax-signup" method="post" accept-charset="UTF-8" action="/users" data-remote="true" data-parsley-validate="">
             <div class="input_container">
               <div class="label_l">Email</div>
