--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,33 @@
 <h2>Sign up</h2>
 
-<h4> Your are registering as <%= params[:user_type] %></h4>
+<div class="sign-up-form">
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { parsley_validate: "" }) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="input_container">
+    <div class="label_l">Email</div>
+    <%= f.email_field :email, autofocus: true, required: true, class: 'login_input' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="input_container">
+    <div class="label_l">password</div>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <% end %>
+    <%= f.password_field :password, autocomplete: 'off', required: true, class: 'login_input' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="input_container">
+    <div class="label_l">Password confirmation</div>
+    <%= f.password_field :password_confirmation, autocomplete: 'off', required: true, class: 'login_input' %>
   </div>
 
     <div class="field">
       <%= f.hidden_field :user_type, html_options= { value: params[:user_type]} %>
     </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="">
+    <%= f.submit 'Sign up' %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+<%= render 'devise/shared/links' %>
