[Homepage]: Font changed  in Brand Home page

--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -37,11 +37,11 @@
 <div class="identity">
   <div class="wrapper-content">
     <div class="text-upper">
-      <div class="text-upper-identity">Get Listed,</div>
+      <div class="text-upper-identity text-get-listed">Get Listed,</div>
     </div>
     <div class="text-lower">
       <div class="text-lower-identity">Be an influencer and advocate</div>
-      <div class="text-lower-identity">Brands you love.</div>
+      <div class="text-lower-identity">brands you love.</div>
     </div>
   </div>
 </div>
