--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -173,6 +173,11 @@ ul.menu-item li {
   line-height: 1.2;
 }
 
+.text-get-listed {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+}
+
 .btn-custom{
   display: inline-block;
   padding: 6px 12px;
@@ -221,7 +226,7 @@ ul.menu-item li {
   background-color: #00c9f3;
   border: medium none;
   border-radius: 0;
-  height: 38px;
+  height: 35px;
   width: 111px;
   margin-top: 14px;
 }
