[Campaign]: Logo Added in Set Facebook Activity Modal

--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -2,8 +2,8 @@
     <div class="modal fade" id="SetFacebookActivity" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content profile-image-modal-content">
-          <div class="modal-header profile-image-modal-header">
-            <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
+          <div class="modal-header profile-image-modal-header set-facebook-activity">
+            <a href="#"><%= image_tag('Logo.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
