- remove inline css from view

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -756,6 +756,18 @@ th{
   list-style: square;
   padding-top: 5px;
 }
+.color-brand{
+  color: #32ccfe
+}
+.color-influencer{
+  color: #fa5c8f
+}
+.color-campaign{
+  color: #98cb00
+}
+.color-posts{
+  color: #fecb32
+}
 
 
 
