--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -52,19 +52,19 @@
 
     <div class="text-top"> Statistics</div>
     <div class="stats-block">
-      <span class="numeric" style="color: #32ccfe">10,000</span>
+      <span class="numeric color-brand" >10,000</span>
       <span class="textual"> BRANDS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric" style="color: #fa5c8f">25,000</span>
+      <span class="numeric color-influence" >25,000</span>
       <span class="textual"> INFLUENCERS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric" style="color: #98cb00">120,000</span>
+      <span class="numeric color-campaign" >120,000</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric" style="color: #fecb32">248,000</span>
+      <span class="numeric color-posts">248,000</span>
       <span class="textual"> POSTS </span>
     </div>
   </div>
