--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -16,14 +16,14 @@
     <li class= "active" id="inbox_list">
       <%= link_to offers_path, remote: true do %>
                         <span id="inbox-blue"><img src="<%= asset_path('Inbox-blue.png') %>">
-                        </span><span id="inbox-black" style="display: none"><img  src="<%= asset_path('Inbox.png') %>"></span>
+                        </span><span id="inbox-black"><img  src="<%= asset_path('Inbox.png') %>"></span>
           <span class="inbox-tab">Inbox</span>
       <% end %>
     </li>
     <li class= "" id="starred_list">
       <%= link_to offers_path(starred: true), remote: true, data: { target: ''} do %>
           <span id="star-black"><img src="<%= asset_path('Starred.png') %>"></span>
-          <span id="star-blue" style="display: none"><img src="<%= asset_path('Starred-blue.png') %>"></span>
+          <span id="star-blue"><img src="<%= asset_path('Starred-blue.png') %>"></span>
           <span class="starred-tab">Starred</span>
       <% end %>
     </li>
@@ -66,6 +66,9 @@
             $(this).children('.title').html($(this).children('.title').html().replace(regex, replaceWord));
         });
         <% end %>
+<!--need to change proper style sheet -->
+        $('#star-blue').hide();
+        $('inbox-black').hide();
     });
 
 </script>
