--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -33,7 +33,8 @@
               <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
             </div>
 
-            <button class="btn btn-default save_btn" type="submit">SUBMIT</button>
+            <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+                  <%= link_to 'Forgot your password', new_password_path(:user) %><br />
             </form>
           </div>
         </div>
