--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -20,30 +20,53 @@
         </div>
         <div class="row hidden" id="brand-signup">
           <div class="col-md-12">
-            <p>Account Set Up</p>
-            <div id="validation-error" class="text-danger">this is </div>
-            <form id="ajax-signup" method="post" accept-charset="UTF-8" action="/users" data-remote="true" data-parsley-validate="">
-            <div class="input_container">
-              <div class="label_l">Email</div>
-              <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
-              <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
-            </div>
-            <div class="input_container">
-              <div class="label_l">Password</div>
-              <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
-              <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
-            </div>
-            <div class="input_container">
-              <div class="label_l">Re-type Password</div>
-              <input data-parsley-id="1949" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password_confirmation]" id="user_password_confirmation" type="password">
-              <ul id="parsley-id-1949" class="parsley-errors-list"></ul>
-            </div>
 
-              <div class="field">
-                <%= hidden_field_tag 'user[user_type]', '0'%>
+            <div id="validation-error" class="text-danger"></div>
+            <form id="ajax-signup" method="post" accept-charset="UTF-8" action="/users" data-remote="true" data-parsley-validate="">
+
+              <p>Sign up by creating an account</p>
+
+              <div class="input_container">
+                <div class="label_l">First Name</div>
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[first_name]" id="user_email" type="text">
+                <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
               </div>
 
-            <button class="btn btn-default save_btn" type="submit">SUBMIT</button>
+              <div class="input_container">
+                <div class="label_l">Last Name</div>
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[last_name]" id="user_email" type="text">
+                <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
+              </div>
+
+              <div class="input_container">
+                <div class="label_l">Email</div>
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+                <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
+              </div>
+
+              <p>Account Set Up</p>
+
+              <div class="input_container">
+                <div class="label_l">Email</div>
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+                <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
+              </div>
+              <div class="input_container">
+                <div class="label_l">Password</div>
+                <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
+                <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
+              </div>
+              <div class="input_container">
+                <div class="label_l">Re-type Password</div>
+                <input data-parsley-id="1949" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password_confirmation]" id="user_password_confirmation" type="password">
+                <ul id="parsley-id-1949" class="parsley-errors-list"></ul>
+              </div>
+
+              <div class="field">
+                <%= hidden_field_tag 'user[user_type]', '0' %>
+              </div>
+
+              <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
             </form>
           </div>
         </div>
@@ -52,12 +75,12 @@
             <div class="col-md-12 no-left">
               <a href="<%= user_omniauth_authorize_path('facebook') %>">Facebook &nbsp; &nbsp; <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
             </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-  </div>
 
 <script>
     $(function () {
@@ -71,7 +94,7 @@
             showSignUpInfo(value);
         });
 
-        function showSignUpInfo(id){
+        function showSignUpInfo(id) {
             if (id == '1') {
                 $('#brand-signup').addClass('hidden');
                 $('#influencer-signup').removeClass('hidden');
