--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -37,7 +37,13 @@
 .header {
   color: black;
   font-weight: lighter;
-  padding-top: 15px;
+  padding-top: 16px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 99;
+  background-color: white;
 }
 
 .navbar{
@@ -152,7 +158,8 @@ ul.menu-item li {
 
 .identity {
   background: image-url("Pic1.png") no-repeat scroll center center / cover ;
-  height: 680px;
+  height: 620px;
+  padding-top: 70px;
 }
 
 .identity .text-upper {
@@ -209,6 +216,7 @@ ul.menu-item li {
   margin-left: 20px;
   margin-right: 0;
   padding: 10px;
+  height: 36px;
 }
 
 .collapsing .navbar-nav > li > a.btn-custom{
