--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -19,8 +19,8 @@
     }
 }
 /*.clear-padding-margin{*/
-    /*padding-right: 0;*/
-    /*margin: 0;*/
+/*padding-right: 0;*/
+/*margin: 0;*/
 /*}*/
 @media  (min-width: 768px){
     .clear-padding-margin{
@@ -37,7 +37,13 @@
 .header {
     color: black;
     font-weight: lighter;
-    padding-top: 15px;
+    padding-top: 16px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 99;
+    background-color: white;
 }
 
 .navbar{
@@ -152,7 +158,8 @@ ul.menu-item li {
 
 .identity {
     background: url("../images/Pic1.png") no-repeat scroll center center / cover ;
-    height: 680px;
+    height: 620px;
+    padding-top: 70px;
 }
 
 .identity .text-upper {
@@ -204,6 +211,7 @@ ul.menu-item li {
     margin-left: 20px;
     margin-right: 0;
     padding: 10px;
+    height: 36px;
 }
 
 .collapsing .navbar-nav > li > a.btn-custom{
@@ -512,24 +520,24 @@ ul.menu-item li {
     }
 
     /*.footer span {*/
-        /*display: block;*/
-        /*margin: 10px;*/
-        /*float: none !important;*/
-        /*text-align: center;*/
+    /*display: block;*/
+    /*margin: 10px;*/
+    /*float: none !important;*/
+    /*text-align: center;*/
     /*}*/
 }
 
 @media screen and (max-width: 580px){
     /*.footer span.pull-left {*/
-        /*position: absolute;*/
-        /*left: 5%;*/
+    /*position: absolute;*/
+    /*left: 5%;*/
     /*}*/
 
     /*.footer span.pull-right {*/
-        /*position: absolute;*/
-        /*margin-top: 40px;*/
-        /*text-align: center;*/
-        /*left: 40%;*/
+    /*position: absolute;*/
+    /*margin-top: 40px;*/
+    /*text-align: center;*/
+    /*left: 40%;*/
     /*}*/
 
 }
