[Home]: Use Helvetica Thin for Homepage Identity section

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -163,9 +163,8 @@ ul.menu-item li {
 }
 
 .identity .text-upper {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 100;
-  font-size: 78px;
+  font-family: 'Helvetica Neue 35 Thin', sans-serif;
+  font-size: 74px;
   letter-spacing: -4px;
   padding-top: 160px;
   line-height: 1;
@@ -178,6 +177,7 @@ ul.menu-item li {
   color: #00aeef;
   font-size: 30px;
   line-height: 1.2;
+  letter-spacing: -0.6px;
 }
 
 .text-get-listed {
