--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,7 +1,8 @@
 <% if @success %>
-    window.location.href = "<%= new_user_registration_path %>";
+    $('#success-message').html('Your information submitted successfully.When account activated we will notify you by email.');
+    $('#validation-error').html('');
 <% else %>
     console.log('---------------- render sign up errors-----------------------' );
-
+    $('#success-message').html('');
     $('#validation-error').html("<%= j render 'shared/show_errors', :object => @user %>");
 <% end %>
