--- a/app/assets/stylesheets/influencers_home.scss
+++ b/app/assets/stylesheets/influencers_home.scss
@@ -67,3 +67,11 @@
 .login-modal-footer {
   padding-top: 95px;
 }
+
+.influencer-identity {
+  margin-top: 70px;
+}
+
+.identity .text-lower {
+  letter-spacing: -0.6px;
+}
