--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -35,7 +35,7 @@
 <%= render partial: 'shared/sign_up_modal'%>
 <%= render partial: 'shared/sign_in_modal'%>
 
-<div class="identity">
+<div class="identity influencer-identity">
   <div class="wrapper-content">
     <div class="text-upper">
       <div class="text-upper-identity text-get-listed">Get Listed,</div>
