--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -57,14 +57,14 @@
       <span class="textual"> BRANDS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-influence" >25,000</span>
+      <span class="numeric color-influencer" >25,000</span>
       <span class="textual"> INFLUENCERS </span>
     </div>
     <div class="stats-block">
       <span class="numeric color-campaign" >120,000</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
-    <div class="stats-block">
+    <div class="stats-block posts-padding">
       <span class="numeric color-posts">248,000</span>
       <span class="textual"> POSTS </span>
     </div>
