--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -63,7 +63,7 @@
       <span class="numeric color-campaign">120,000</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
-    <div class="stats-block">
+    <div class="stats-block posts-padding">
       <span class="numeric color-posts">248,000</span>
       <span class="textual"> POSTS </span>
     </div>
