--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -53,19 +53,19 @@
 
     <div class="text-top"> Statistics</div>
     <div class="stats-block">
-      <span class="numeric color-brand" >10,000</span>
+      <span class="numeric color-brand count">10,000</span>
       <span class="textual"> BRANDS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-influencer" >25,000</span>
+      <span class="numeric color-influencer count">25,000</span>
       <span class="textual"> INFLUENCERS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-campaign" >120,000</span>
+      <span class="numeric color-campaign count">120,000</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
     <div class="stats-block posts-padding">
-      <span class="numeric color-posts">248,000</span>
+      <span class="numeric color-posts count">248,000</span>
       <span class="textual"> POSTS </span>
     </div>
   </div>
@@ -201,6 +201,13 @@
                 scrollTop: $( $.attr(this, 'href') ).offset().top
             }, 1000);
             return false;
+        });
+
+        // for counting number from 0 to upto some value
+
+        $('.count').counterUp({
+            delay: 10,
+            time: 3000
         });
 
         var path = '//easy.myfonts.net/v2/js?sid=10257(font-family=Helvetica+Neue+35+Thin)&sid=10261(font-family=Helvetica+Neue+75+Bold)&sid=10263(font-family=Helvetica+Neue+45+Light)&sid=10265(font-family=Helvetica+Neue+65+Medium)&key=uhXXeSVbUB',
