--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -52,19 +52,19 @@
 
     <div class="text-top"> Statistics</div>
     <div class="stats-block">
-      <span class="numeric color-brand" >10,000</span>
+      <span class="numeric color-brand count">10,000</span>
       <span class="textual"> BRANDS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-influencer">25,000</span>
+      <span class="numeric color-influencer count">25,000</span>
       <span class="textual"> INFLUENCERS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-campaign">120,000</span>
+      <span class="numeric color-campaign count">120,000</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
     <div class="stats-block posts-padding">
-      <span class="numeric color-posts">248,000</span>
+      <span class="numeric color-posts count">248,000</span>
       <span class="textual"> POSTS </span>
     </div>
   </div>
@@ -197,6 +197,13 @@
                 scrollTop: $( $.attr(this, 'href') ).offset().top
             }, 1000);
             return false;
+        });
+
+        // for counting number from 0 to upto some value
+
+        $('.count').counterUp({
+            delay: 10,
+            time: 3000
         });
     });
 
