user sign up and account verification process complete
- need to test and improve

--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -20,7 +20,7 @@
         </div>
         <div class="row hidden" id="brand-signin">
           <div class="col-md-12">
-            <div id="sign-in-validation-error" class="text-danger"> text </div>
+            <div id="sign-in-validation-error" class="text-danger"></div>
             <form method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="true" data-parsley-validate="">
             <div class="input_container">
               <div class="label_l">Email</div>
