[Home]: All subheading changed into Helvetica Light

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -163,10 +163,10 @@ ul.menu-item li {
 }
 
 .identity .text-upper {
-  font-family: 'Helvetica Neue 45 Light', sans-serif;
+  font-family: 'Helvetica Neue 35 Thin', sans-serif;
   font-size: 74px;
   letter-spacing: -0.6px;
-  padding-top: 145px;
+  padding-top: 135px;
   line-height: 1;
   padding-bottom: 10px;
 }
@@ -309,7 +309,6 @@ ul.menu-item li {
 
 .about-us .text-top {
   font-size: 30px;
-  font-family: Helvetica Neue, Roboto, sans-serif;
   font-weight: 300;
   color: #ffffff;
   padding-bottom: 20px;
@@ -427,7 +426,6 @@ ul.menu-item li {
 
 .brands .text-top {
   font-size: 30px;
-  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   padding-bottom: 20px;
 }
@@ -643,5 +641,10 @@ ul.menu-item li {
 }
 
 .helvetica-neue-light {
-  font-family: 'Helvetica Neue 45 Light', sans-serif;
+  font-family: 'Helvetica Neue 45 Light','Roboto', sans-serif;
+}
+
+.raleway-semibold {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
 }
