--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -24,7 +24,7 @@
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href="#signin", data-toggle='modal' >LOGIN</a></li>
-              <li><%= link_to 'SIGN UP FREE', '#signup', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white' %></li>
+              <li><%= link_to 'SIGN UP FREE', '#signup', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white raleway-semibold' %></li>
           <% end %>
         </ul>
       </div>
@@ -51,7 +51,7 @@
 <div class="statistics">
   <div class="wrapper-content">
 
-    <div class="text-top"> Statistics</div>
+    <div class="text-top helvetica-neue-light"> Statistics</div>
     <div class="stats-block">
       <span class="numeric color-brand count">10,000</span>
       <span class="textual"> BRANDS </span>
@@ -73,7 +73,7 @@
 
 <div class="about-us" id="about_us">
   <div class="wrapper-content">
-    <div class="text-top">
+    <div class="text-top helvetica-neue-light">
       About Us
     </div>
 
@@ -108,7 +108,7 @@
 
 <div class="brands">
   <div class="wrapper-content">
-    <div class="text-top few-brand">Few of our Brands</div>
+    <div class="text-top few-brand helvetica-neue-light">Few of our Brands</div>
     <div class="brands-block">
       <span><a href="#" data-toggle="popover" title="Eagleboys Pizza"><%= image_tag('Brand1.png') %></a></span>
       <span><a href="#" data-toggle="popover" title="Demo"><%= image_tag('Brand2.png') %></a></span>
@@ -124,7 +124,7 @@
 
     <div class="row contact-form">
       <div class="col-md-7 col-sm-8 col-xs-12">
-        <div class="text-top col-md-12"> Get in touch!</div>
+        <div class="text-top col-md-12 helvetica-neue-light"> Get in touch!</div>
 
         <%= form_tag get_in_touch_public_index_path do %>
             <div class="row">
@@ -159,7 +159,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit' %>
+                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit raleway-semibold' %>
               </div>
             </div>
         <% end %>
