--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -24,7 +24,7 @@
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href='#signin'  data-toggle = 'modal'>LOGIN</a></li>
-              <li><%= link_to 'SIGN UP FREE', '#signup', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white' %></li>
+              <li><%= link_to 'SIGN UP FREE', '#signup', 'data-toggle' => 'modal', :class => 'btn-custom btn-theme text-white raleway-semibold' %></li>
           <% end %>
         </ul>
       </div>
@@ -35,10 +35,10 @@
 <%= render partial: 'shared/sign_up_modal'%>
 <%= render partial: 'shared/sign_in_modal'%>
 
-<div class="identity influencer-identity">
+<div class="identity">
   <div class="wrapper-content">
     <div class="text-upper">
-      <div class="text-upper-identity text-get-listed">Get Listed,</div>
+      <div class="text-upper-identity">Get Listed,</div>
     </div>
     <div class="text-lower">
       <div class="text-lower-identity">Be an influencer and advocate</div>
@@ -50,7 +50,7 @@
 <div class="statistics">
   <div class="wrapper-content">
 
-    <div class="text-top"> Statistics</div>
+    <div class="text-top helvetica-neue-light"> Statistics</div>
     <div class="stats-block">
       <span class="numeric color-brand count">10,000</span>
       <span class="textual"> BRANDS </span>
@@ -72,7 +72,7 @@
 
 <div class="about-us" id="about_us">
   <div class="wrapper-content">
-    <div class="text-top">
+    <div class="text-top helvetica-neue-light">
       About Us
     </div>
 
@@ -107,7 +107,7 @@
 
 <div class="brands">
   <div class="wrapper-content">
-    <div class="text-top few-brand">Few of our Influencers</div>
+    <div class="text-top few-brand helvetica-neue-light">Few of our Influencers</div>
     <div class="brands-block">
       <span><a href="#" data-toggle="popover" title="2.3M Followers"><%= image_tag('tom-cruise.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="2.5M Followers"><%= image_tag('Akshay-kumar.png', :class => 'influencers-picture') %></a></span>
@@ -123,7 +123,7 @@
 
     <div class="row contact-form">
       <div class="col-md-7 col-sm-8 col-xs-12">
-        <div class="text-top col-md-12"> Get in touch!</div>
+        <div class="text-top col-md-12 helvetica-neue-light"> Get in touch!</div>
 
         <%= form_tag get_in_touch_public_index_path do %>
             <div class="row">
@@ -158,7 +158,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit' %>
+                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit raleway-semibold' %>
               </div>
             </div>
         <% end %>
@@ -205,6 +205,15 @@
             delay: 10,
             time: 3000
         });
+
+        var path = '//easy.myfonts.net/v2/js?sid=10257(font-family=Helvetica+Neue+35+Thin)&sid=10261(font-family=Helvetica+Neue+75+Bold)&sid=10263(font-family=Helvetica+Neue+45+Light)&sid=10265(font-family=Helvetica+Neue+65+Medium)&key=uhXXeSVbUB',
+                protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
+                trial = document.createElement('script');
+        trial.type = 'text/javascript';
+        trial.async = true;
+        trial.src = protocol + path;
+        var head = document.getElementsByTagName("head")[0];
+        head.appendChild(trial);
     });
 
 </script>
