[Home]: Button is semibold now

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -217,6 +217,7 @@ ul.menu-item li {
   margin-right: 0;
   padding: 10px;
   height: 36px;
+  font-weight: 600;
 }
 
 .collapsing .navbar-nav > li > a.btn-custom{
