[Home]: 1. Button Font size is now 13px 2. Technology Icon replaced

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -218,6 +218,7 @@ ul.menu-item li {
   padding: 10px;
   height: 36px;
   font-weight: 600;
+  font-size: 13px;
 }
 
 .collapsing .navbar-nav > li > a.btn-custom{
