--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -160,6 +160,7 @@ ul.menu-item li {
   background: image-url("Pic1.png") no-repeat scroll center center / cover ;
   height: 620px;
   padding-top: 70px;
+  margin-top: 62px;
 }
 
 .identity .text-upper {
@@ -649,4 +650,8 @@ ul.menu-item li {
 .raleway-semibold {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
+}
+
+#mfPreviewBar {
+  display: none;
 }
