--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -860,7 +860,7 @@ th {
 }
 
 #brand-signup {
-  margin: 30px 0;
+  margin: 0 0 30px;
 }
 
 #signup .modal-content {
@@ -922,6 +922,13 @@ th {
 .checkbox-primary input[type="checkbox"]:checked {
   background-color: #ffb734;
   border-color: #e69f1d;
+}
+.alert a.close{
+  text-decoration: none;
+}
+#signin .modal-header h3, #signup .modal-header h3{
+  color: #ffb734;
+  font-weight: 600;
 }
 
 #mfPreviewBar {
