--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -10,8 +10,12 @@
   </div>
   <div class="row hidden" id="brand-signin">
     <div class="col-md-12">
-      <div id="sign-in-validation-error" class="text-danger"></div>
-      <form method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="true" data-parsley-validate="">
+      <% if params[:controller] == 'public' %>
+          <div id="sign-in-validation-error">
+          </div>
+      <% end %>
+      <form method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <div class="input_container">
           <div class="label_l">Email</div>
           <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
