--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -57,7 +57,7 @@
                 <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
               </div>
               <div class="input_container">
-                <textarea name="user[short_bio]" data-parsley-id="2000" rows="5" cols="50" placeholder="company short bio" required=""></textarea>
+                <textarea id='company-short-bio' name="user[short_bio]" data-parsley-id="2000" rows="5" cols="50" placeholder="company short bio" required=""></textarea>
                 <ul id="parsley-id-2000" class="parsley-errors-list"></ul>
               </div>
 
